# edgin

./: .gitignore  Dockerfile.dev
backend/logic_unit/: CMakeLists.txt  main.cpp
backend/logic_unit/classifier/: Classifier.cpp  Classifier.h
backend/logic_unit/decoder/: Decoder.cpp  Decoder.h
backend/logic_unit/dj/: DJ.cpp  DJ.h
backend/logic_unit/io/: IOHandler.cpp  IOHandler.h
backend/logic_unit/structs/: AudioQueue.h
scripts/: dev_startup.sh
